<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
                  android:orientation="vertical"
            android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/edit_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/description_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_textview"
            android:gravity="top"
            android:hint="@string/edit_description"
            android:lines="5"
            android:maxLines="5"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_title"/>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:hint="@string/Steps_to_receipt"
            app:layout_constraintStart_toStartOf="@+id/recycler_create"
            app:layout_constraintTop_toBottomOf="@+id/description_image"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/circle_shape_left"
            android:text="+"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toTopOf="@+id/recycler_create"
            app:layout_constraintEnd_toStartOf="@+id/btn_reduce"
            app:layout_constraintTop_toTopOf="@+id/textView2"/>

        <Button
            android:id="@+id/btn_reduce"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_shape_right"
            android:text="-"
            android:textColor="@color/colorBlack"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_add"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/btn_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>

        <Button
            android:id="@+id/btn_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/circle_border_button"
            android:text="@string/create_receipt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
